# qsim

./: Cargo.toml  README.md
.github/: copilot-instructions.md
crates/qsim-core/: Cargo.toml
crates/qsim-core/src/: error.rs  lib.rs  state.rs  topology.rs  traits.rs
crates/qsim-elements/: Cargo.toml
crates/qsim-elements/src/: branch.rs  bus.rs  generator.rs  lib.rs  load.rs
crates/qsim-io/: Cargo.toml
crates/qsim-io/src/: error.rs  lib.rs  network.rs
crates/qsim-solvers/: Cargo.toml
crates/qsim-solvers/src/: dc.rs  lib.rs
qsim/: Cargo.toml
qsim/src/: lib.rs
testdata/: README.md
testdata/ieee/: ieee14.json  ieee9.json
testdata/simple/: 3bus.json
