[package]
name = "qsim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Power grid modeling and simulation library"
keywords = ["power-grid", "simulation", "power-flow", "electrical"]
categories = ["simulation", "science"]

[dependencies]
qsim-core.workspace = true
qsim-elements.workspace = true
qsim-solvers.workspace = true
qsim-io.workspace = true
