[package]
name = "qsim-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Core engine, traits, and state management for qsim"

[dependencies]
petgraph.workspace = true
thiserror.workspace = true
rayon.workspace = true

[dev-dependencies]
